@@ -37125,6 +37125,10 @@ void menu_process_f_functions_by_action_name(int id_funcion,int si_pulsado_icono
 			menu_debug_save_binary(0);
 		break;
 
+		case F_FUNCION_SETTINGS:
+			menu_settings(0);
+		break;        
+
 		case F_FUNCION_WAVEFORM:
 			menu_audio_new_waveform(0);
 		break;    
