@@ -578,7 +578,7 @@ extern void menu_first_aid_init(void);
 extern void menu_first_aid_random_startup(void);
 extern int menu_first_aid_title(char *key_setting,char *title);
 
-#define MAX_F_FUNCTIONS 59
+#define MAX_F_FUNCTIONS 60
 
 enum defined_f_function_ids {
 	//reset, hard-reset, nmi, open menu, ocr, smartload, osd keyboard, exitemulator.
@@ -596,6 +596,7 @@ enum defined_f_function_ids {
     F_FUNCION_FFW,
 	F_FUNCION_LOADBINARY, 
 	F_FUNCION_SAVEBINARY,
+    F_FUNCION_SETTINGS,
     F_FUNCION_WAVEFORM,
     F_FUNCION_AUDIO_REGISTERS,
     F_FUNCION_AUDIO_SHEET,
